Add Dockerfile, Docker Compose profiles, i18n BG/EN translation service, new routes, retake README screenshots